--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ title: My Website
 # Your name to show in the footer
 author: Some Person
 
+theme: minima
+
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
